--- a/modules/goapp/templates/bash_profile.erb
+++ b/modules/goapp/templates/bash_profile.erb
@@ -10,7 +10,7 @@ fi
 # User specific environment and startup programs
 
 PATH=$PATH:$HOME/bin
-export GOROOT=<%= goroot %>
+export GOROOT=<%= goroot %>/go
 export GOBIN=$GOROOT/bin
 export PATH=$PATH:$GOBIN
 
